// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider demo -- disabled 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
  cursor: not-allowed;
  pointer-events: none;
  color: #bbb;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  pointer-events: none;
  color: #bbb;
  border: 1px solid #c3cad9;
  padding-right: 22px;
  border-color: #d9d9d9;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8:hover {
  border-color: #4683e6;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider uc-fe-slider-disabled"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="true"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
        disabled=""
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c3"
            disabled=""
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c3"
            disabled=""
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            disabled=""
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c8"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c9"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- isSensitive 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- marks 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider uc-fe-slider-with-marks"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        >
          <span
            class="uc-fe-slider-dot"
            style="left:25%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:50%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:90%;"
          />
        </div>
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        >
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:25%;"
          >
            5个
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:50%;"
          >
            10个
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:90%;"
          >
            18个
          </span>
        </div>
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider uc-fe-slider-with-marks"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:0.6666666666666667%;"
        />
        <div
          class="uc-fe-slider-step"
        >
          <span
            class="uc-fe-slider-dot"
            style="left:10%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:20%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:35%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:100%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:51.24999999999999%;"
          />
        </div>
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="12"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:0.6666666666666667%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        >
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:10%;"
          >
            50
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:20%;"
          >
            100
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:35%;"
          >
            200
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:51.24999999999999%;"
          >
            400
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:100%;border-right:none;"
          >
            1000
          </span>
        </div>
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="1000"
            min="10"
            step="1"
            value="12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- minmax 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="15"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="10"
            step="1"
            value="15"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:10%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:10%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="100"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- numberInput 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:5%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="5"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:5%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__arrow-up "
              type="arrow-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__arrow-down "
              type="arrow-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="100"
            min="0"
            step="1"
            value="5"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:5%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="5"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:5%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:10%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:10%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="100"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- numberInputTipFormatter 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- slider 1`] = `
.c26 {
  position: relative;
}

.c28 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c24 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c30 .c27 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c30 .c27::-webkit-input-placeholder {
  color: #abb4c3;
}

.c30 .c27::-moz-placeholder {
  color: #abb4c3;
}

.c30 .c27:-ms-input-placeholder {
  color: #abb4c3;
}

.c30 .c27::placeholder {
  color: #abb4c3;
}

.c30 .c27 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c30 .c23,
.c30 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c30 .c23:hover,
.c30 .c25:hover {
  color: #4074e1;
}

.c30 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c30 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c22 .c27 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c22 .c27::-webkit-input-placeholder {
  color: #abb4c3;
}

.c22 .c27::-moz-placeholder {
  color: #abb4c3;
}

.c22 .c27:-ms-input-placeholder {
  color: #abb4c3;
}

.c22 .c27::placeholder {
  color: #abb4c3;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c27 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c22 .c23,
.c22 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c22 .c23:hover,
.c22 .c25:hover {
  color: #4074e1;
}

.c22 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c22 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c29 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c29 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c29 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c29 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c29 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c29 .uc-fe-slider-handle::before,
.c29 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c29 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c29 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c29 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c29 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c29 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c29 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c29 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c29 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c29 .uc-fe-slider-dot {
  display: none;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 {
  position: relative;
  z-index: 1;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        isSensitive
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideNumberInput
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        min
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c22"
        >
          <div>
            <span
              class="c23 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up "
                type="caret-up"
              />
            </span>
            <span
              class="c25 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down "
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c26"
          >
            <input
              autocomplete="off"
              class="c27 uc-fe-numberinput-input c28"
              min="-9007199254740991"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        max
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c22"
        >
          <div>
            <span
              class="c23 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up "
                type="caret-up"
              />
            </span>
            <span
              class="c25 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down "
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c26"
          >
            <input
              autocomplete="off"
              class="c27 uc-fe-numberinput-input c28"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        step
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c22"
        >
          <div>
            <span
              class="c23 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up "
                type="caret-up"
              />
            </span>
            <span
              class="c25 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down "
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c26"
          >
            <input
              autocomplete="off"
              class="c27 uc-fe-numberinput-input c28"
              min="0.0001"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c29"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:10%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:10%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c22"
      >
        <div>
          <span
            class="c23 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c24"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c25 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c24"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c26"
        >
          <input
            autocomplete="off"
            class="c27 uc-fe-numberinput-input c28"
            max="100"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- step 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="5"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- tipFormatter 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- uncontrolled 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c6::placeholder {
  color: #abb4c3;
}

.c8 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c8 .c2,
.c8 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c2:hover,
.c8 .c4:hover {
  color: #4074e1;
}

.c8 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c8 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1 .c6 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c6::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c6:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c6::placeholder {
  color: #abb4c3;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c6 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:25%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="5"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:25%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="5"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-default c1"
      >
        <div>
          <span
            class="c2 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-up "
              type="caret-up"
            />
          </span>
          <span
            class="c4 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c3"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__caret-down "
              type="caret-down"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c5"
        >
          <input
            autocomplete="off"
            class="c6 uc-fe-numberinput-input c7"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
